--- a/arch/arm/configs/cyanogenmod_vs985_defconfig
+++ b/arch/arm/configs/cyanogenmod_vs985_defconfig
@@ -177,9 +177,8 @@ CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_RCU_BOOST is not set
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=19
-CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
@@ -240,7 +239,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -261,10 +260,7 @@ CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
-CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
-CONFIG_ARCH_MMAP_RND_BITS_MIN=8
-CONFIG_ARCH_MMAP_RND_BITS_MAX=16
-CONFIG_ARCH_MMAP_RND_BITS=8
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 
 #
 # GCOV-based kernel profiling
@@ -509,7 +505,7 @@ CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
@@ -566,10 +562,10 @@ CONFIG_MSM_PIL_VENUS=y
 CONFIG_MSM_PIL_PRONTO=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_BUSPM_DEV=y
-CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_RPM_LOG=y
-CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
+# CONFIG_MSM_RPM_LOG is not set
+# CONFIG_MSM_RPM_STATS_LOG is not set
+# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -580,7 +576,7 @@ CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG_V2=y
 CONFIG_MSM_MEMORY_DUMP=y
-# CONFIG_MSM_DLOAD_MODE is not set
+CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_JTAG=y
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
@@ -604,7 +600,7 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_OCMEM_DEBUG=y
+# CONFIG_MSM_OCMEM_DEBUG is not set
 # CONFIG_MSM_OCMEM_NONSECURE is not set
 # CONFIG_MSM_OCMEM_POWER_DEBUG is not set
 # CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
@@ -625,16 +621,15 @@ CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
-CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
+# CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL is not set
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 # CONFIG_MSM_UARTDM_Core_v14 is not set
-# CONFIG_MSM_COMMON_LOG is not set
 CONFIG_MSM_BOOT_STATS=y
 # CONFIG_MSM_XPU_ERR_FATAL is not set
 # CONFIG_MSM_CPR_REGULATOR is not set
 CONFIG_KRAIT_REGULATOR=y
-# CONFIG_KERNEL_TEXT_MPU_PROT is not set
+CONFIG_HAS_MACH_MEMUTILS=y
 
 #
 # System MMU
@@ -726,12 +721,7 @@ CONFIG_ARCH_NR_GPIO=0
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-# CONFIG_HZ_100 is not set
-# CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
-CONFIG_SCHED_HRTICK=y
+CONFIG_HZ=100
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
@@ -834,6 +824,7 @@ CONFIG_HAVE_AOUT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_POWERSUSPEND=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -1041,6 +1032,7 @@ CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
+CONFIG_LG_VPN=y
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -1962,7 +1954,7 @@ CONFIG_SLIMBUS_MSM_NGD=y
 #
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-CONFIG_DEBUG_GPIO=y
+# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -2004,7 +1996,7 @@ CONFIG_GPIO_MSM_V3=y
 #
 # CONFIG_GPIO_PM8XXX_RPC is not set
 CONFIG_GPIO_QPNP_PIN=y
-CONFIG_GPIO_QPNP_PIN_DEBUG=y
+# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
